--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
     <link href="styles.css" rel="stylesheet" type="text/css" />
     <title></title>
   </head>
