I add a paragraph to check who's turn in the index html file I updated the square click events just once

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <th class="Position8"></th>
         <th class="Position9"></th>
       </tr>
+    </table>
+      <p class="Turn"></p>
 
   </body>
 </html>
