I added a reset function so the player can reset the game any time

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </table>
       <p class="Turn"></p>
       <p class="Winner"></p>
-      <button>Reset</button>
+      <button class="Reset">Reset</button>
 
   </body>
 </html>
