--- a/index.html
+++ b/index.html
@@ -1,33 +1,55 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <script defer src="script.js"></script>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
-    <title></title>
-  </head>
-  <body>
 
-    <table>
-      <tr class="Row1">
-        <th class="Position1"></th>
-        <th class="Position2"></th>
-        <th class="Position3"></th>
-      </tr>
-      <tr class="Row2">
-        <th class="Position4"></th>
-        <th class="Position5"></th>
-        <th class="Position6"></th>
-      </tr>
-      <tr class="Row3">
-        <th class="Position7"></th>
-        <th class="Position8"></th>
-        <th class="Position9"></th>
-      </tr>
-    </table>
-      <p class="Turn"></p>
-      <p class="Winner"></p>
-      <button class="Reset">Reset</button>
+<head>
+  <meta charset="utf-8">
+  <script defer src="script.js"></script>
+  <link href="styles.css" rel="stylesheet" type="text/css" />
+  <title></title>
+</head>
 
-  </body>
+<body>
+
+<div class="All">
+  <div class="TicTacToe">
+
+  <table class="TicTacToe">
+    <tr class="Row1">
+      <th class="Position1"></th>
+      <th class="Position2"></th>
+      <th class="Position3"></th>
+    </tr>
+    <tr class="Row2">
+      <th class="Position4"></th>
+      <th class="Position5"></th>
+      <th class="Position6"></th>
+    </tr>
+    <tr class="Row3">
+      <th class="Position7"></th>
+      <th class="Position8"></th>
+      <th class="Position9"></th>
+    </tr>
+  </table>
+
+  <p class="Turn"></p>
+  <p class="Winner"></p>
+
+  <button class="Reset">Reset</button>
+
+</div>
+
+  <table class="ScoreBoard">
+    <tr class="player1">
+      <th>Player 1</th>
+    </tr>
+    <tr class="player2">
+      <th>Player 2</th>
+    </tr>
+  </table>
+
+</div>
+
+
+</body>
+
 </html>
