I added score function to count the player scores

--- a/index.html
+++ b/index.html
@@ -34,18 +34,24 @@
   <p class="Turn"></p>
   <p class="Winner"></p>
 
-  <button class="Reset">Reset</button>
+  <button class="ResetGame">Reset Game</button>
 
 </div>
 
+<div class="ScoreBoard">
   <table class="ScoreBoard">
     <tr class="player1">
       <th>Player 1</th>
+      <th class="Player1Score"></th>
     </tr>
     <tr class="player2">
       <th>Player 2</th>
+      <th class="Player2Score"></th>
     </tr>
   </table>
+
+  <button class="ResetScore">Reset Score</button>
+</div>
 
 </div>
 
