Capitalized class of players

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
 <div class="ScoreBoard">
   <table class="ScoreBoard">
-    <tr class="player1">
+    <tr class="Player1">
       <th>Player 1</th>
       <th class="Player1Score"></th>
     </tr>
-    <tr class="player2">
+    <tr class="Player2">
       <th>Player 2</th>
       <th class="Player2Score"></th>
     </tr>
